@@ -1,4 +1,12 @@
+
+*******************************************************************************
+post-2.2 release:
+
 2005-01-31    <layer@HOBART>
+
+	* Makefile: copy 2.2 binaries to cobweb
+
+x2005-01-31    <layer@HOBART>
 2.2
 
 	* nfs.cl: change version to 2.2
